...
        android:text="ToggleButton"
        android:textOff="Request Mode Off"
        android:textOn="Request Mode On"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/userConnections"
        android:layout_width="wrap_content"
        android:layout_height="631dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="#5103A9F4"
        android:choiceMode="singleChoice"
...
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/backToMyProfile"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:onClick="backToLoginUserProfile"
        android:text="My Profile"
        android:textSize="20sp" />
...
