...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/backToConnections"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="My Connections"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/socialLinksButton" />

    <Button
        android:id="@+id/logout"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Logout"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintBottom_toTopOf="@+id/backToConnections"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:onClick="showHighSchoolExplore"
        android:text="Explore High Schools"
        app:layout_constraintEnd_toEndOf="parent"
...
