...
            android:id="@+id/highSchoolDropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@android:layout/simple_list_item_1" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_200"
            android:text="Search" />
    </LinearLayout>
...
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <ListView
        android:id="@+id/usersList"
        android:layout_width="wrap_content"
        android:layout_height="631dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="#5103A9F4"
        android:choiceMode="none"
...
